<resources>
    <string name="app_name">Kidz Tool</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>
    <string name="btn_register">Register</string>
    <string name="enter_email">Enter your email here</string>
    <string name="enter_password">Enter password</string>
    <string name="link_reg_message">Already have an account? Sign in.</string>
    <string name="biology_dictionary">Biology Dictionary</string>
    <string name="log_in">Log In</string>
    <string name="human">Human</string>
    <string name="definition">Definition:</string>
    <string name="general_name_scientific_name"><![CDATA[General Name -> Scientific Name]]></string>
    <string name="scientific_name_general_name"><![CDATA[Scientific Name -> General Name]]></string>
    <string name="profile">Profile</string>
    <string name="quiz">Quiz</string>
    <string name="logout">Logout</string>
    <string name="notify_user">You have attempted all the quesions click finish quiz button</string>
    <string name="finish_exam">Finish Exam</string>
    <string name="number_of_questions">Number of question</string>
    <string name="start_quiz">Start quiz</string>
    <string name="note">Note: You can skip a question to answer it later.\n You can also finish the quiz by clicking \"finish quiz\" button at any time.</string>
    <string name="login">Login</string>
</resources>
