<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.raselahmed.kidztool.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loggedInUserEmailtext"
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterActivity"
        android:text="@string/btn_register"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LoginActivity"
        android:text="@string/log_in"
        android:textAllCaps="false"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ProfileActivity"
        android:text="@string/profile"
        android:visibility="gone"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/QuizActivity"
        android:text="@string/quiz"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Dictionary"
        android:text="@string/biology_dictionary"
        android:textAllCaps="false"/>
    
</LinearLayout>

