<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.raselahmed.kidztool.application_layer.Quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnFinishExam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_exam"
            android:textAllCaps="false"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/numberOfQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_questions"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnStartQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_quiz"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/practiceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timeLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/rbFirstOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbSecondOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbThirdOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbFourthOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="#000000"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/quizFinishMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:text="@string/note"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:text="@string/btn_prev"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/btn_next"
            android:textAllCaps="false"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>
